--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     go_router: ^6.2.0
     shared_preferences: ^2.0.18
     riverpod_annotation: ^2.0.0
+    riverpod_lint: ^1.1.2
 
 dev_dependencies:
     flutter_test:
