--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     riverpod_annotation: ^2.0.0
     riverpod_lint: ^1.1.2
     sign_in_with_apple: ^4.3.0
+    google_sign_in: ^6.0.2
 
 dev_dependencies:
   flutter_test:
