--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
     shared_preferences: ^2.0.18
     riverpod_annotation: ^2.0.0
     riverpod_lint: ^1.1.2
+    sign_in_with_apple: ^4.3.0
 
 dev_dependencies:
     flutter_test:
