--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-    sdk: '>=2.19.3 <3.0.0'
+  sdk: '>=2.19.3 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,8 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-    flutter:
-        sdk: flutter
+  flutter:
+    sdk: flutter
 
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
@@ -44,64 +44,49 @@ dependencies:
     sign_in_with_apple: ^4.3.0
 
 dev_dependencies:
-    flutter_test:
-        sdk: flutter
-    build_runner: ^2.3.3
-    riverpod_generator: ^2.0.0
-    # The "flutter_lints" package below contains a set of recommended lints to
-    # encourage good coding practices. The lint set provided by the package is
-    # activated in the `analysis_options.yaml` file located at the root of your
-    # package. See that file for information about deactivating specific lint
-    # rules and activating additional ones.
-    flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
+  build_runner: ^2.3.3
+  riverpod_generator: ^2.0.0
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-    # The following line ensures that the Material Icons font is
-    # included with your application, so that you can use the icons in
-    # the material Icons class.
-    uses-material-design: true
+  uses-material-design: true
 
-    # To add assets to your application, add an assets section, like this:
-    # assets:
-    #   - images/a_dot_burr.jpeg
-    #   - images/a_dot_ham.jpeg
-
-    # An image asset can refer to one or more resolution-specific "variants", see
-    # https://flutter.dev/assets-and-images/#resolution-aware
-
-    # For details regarding adding assets from package dependencies, see
-    # https://flutter.dev/assets-and-images/#from-packages
-
-    # To add custom fonts to your application, add a fonts section here,
-    # in this "flutter" section. Each entry in this list should have a
-    # "family" key with the font family name, and a "fonts" key with a
-    # list giving the asset and other descriptors for the font. For
-    # example:
-    fonts:
-			- family: Pretendard
-        fonts:
-					- asset: assets/fonts/Pretendard-Thin.ttf
-						weight: 100
-					- asset: assets/fonts/Pretendard-ExtraLight.ttf
-						weight: 200
-					- asset: assets/fonts/Pretendard-Light.ttf
-						weight: 300
-					- asset: assets/fonts/Pretendard-Regular.ttf
-						weight: 400
-					- asset: assets/fonts/Pretendard-Medium.ttf
-						weight: 500
-					- asset: assets/fonts/Pretendard-SemiBold.ttf
-						weight: 600
-					- asset: assets/fonts/Pretendard-Bold.ttf
-						weight: 700
-					- asset: assets/fonts/Pretendard-ExtraBold.ttf
-						weight: 800
-					- asset: fonts/Pretendard-Black.ttf
-						weight: 900
+  fonts:
+    - family: Pretendard
+      fonts:
+        - asset: assets/fonts/Pretendard-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Pretendard-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Pretendard-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Pretendard-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Pretendard-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Pretendard-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Pretendard-Black.ttf
+          weight: 900
+    - family: Mont
+      fonts:
+        - asset: assets/fonts/Mont-Bold.ttf
+          weight: 900
+        - asset: assets/fonts/Mont-Heavy.ttf
+          weight: 900
+        - asset: assets/fonts/Mont-Regular.ttf
+          weight: 800
     #   - family: Trajan Pro
     #     fonts:
     #       - asset: fonts/TrajanPro.ttf
