--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,9 @@ flutter:
           weight: 900
         - asset: assets/fonts/Mont-Regular.ttf
           weight: 800
+    - family: CustomIcons
+      fonts:
+        - asset: assets/fonts/CustomIcons.ttf
     #   - family: Trajan Pro
     #     fonts:
     #       - asset: fonts/TrajanPro.ttf
