--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   riverpod_lint: ^1.1.2
   sign_in_with_apple: ^4.3.0
   google_sign_in: ^6.0.2
+  flutter_svg: ^2.0.4
 
 dev_dependencies:
   flutter_test:
@@ -79,11 +80,6 @@ flutter:
     - family: CustomIcons
       fonts:
         - asset: assets/fonts/CustomIcons.ttf
-    #   - family: Trajan Pro
-    #     fonts:
-    #       - asset: fonts/TrajanPro.ttf
-    #       - asset: fonts/TrajanPro_Bold.ttf
-    #         weight: 700
-    #
-    # For details regarding fonts from package dependencies,
-    # see https://flutter.dev/custom-fonts/#from-packages
+
+  assets:
+    - assets/images/
