--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   sign_in_with_apple: ^4.3.0
   google_sign_in: ^6.0.2
   flutter_svg: ^2.0.4
+  package_info_plus: ^3.0.3
 
 dev_dependencies:
   flutter_test:
