--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_sign_in: ^6.0.2
   flutter_svg: ^2.0.4
   package_info_plus: ^3.0.3
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
