--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   fluttertoast: ^8.2.1
   dio: ^5.1.1
   json_serializable: ^6.6.1
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
