--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   flutter_secure_storage: ^8.0.0
   intl: ^0.17.0
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
