--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.3 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -53,6 +53,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   intl: ^0.17.0
   pull_to_refresh: ^2.0.0
+  sleek_circular_slider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
