--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,7 +15,8 @@ analyzer:
     - '**/*.freezed.dart'
   errors:
     invalid_annotation_target: ignore
-
+  enable-experiment:
+    - records
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
