--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.four_hours_client">
+    package="com.bilp.fourHours">
    <application
         android:label="four_hours_client"
         android:name="${applicationName}"
