--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.fourHoursClient</string>
+	<string>com.bilp.fourHours</string>
 	<key>PROJECT_ID</key>
 	<string>four-hours-5d3dd</string>
 	<key>STORAGE_BUCKET</key>
