--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   sleek_circular_slider: ^2.0.1
   shimmer: ^3.0.0
+  flutter_native_splash: ^2.3.1
 
 dev_dependencies:
   flutter_test:
