--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -18,7 +18,7 @@ flutter_native_splash:
 
   # The image parameter allows you to specify an image used in the splash screen.  It must be a
   # png file and should be sized for 4x pixel density.
-  image: 'assets/images/logo_light.png'
+  image: 'assets/images/4.0x/logo_light.png'
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. It is supported for Android, iOS and the Web.  For Android 12,
@@ -36,7 +36,7 @@ flutter_native_splash:
   # set.
   color_dark: '#000000'
   # background_image_dark: 'assets/logo_dark.png'
-  image_dark: 'assets/images/logo_dark.png'
+  image_dark: 'assets/images/4.0x/logo_dark.png'
   # branding_dark: assets/dart_dark.png
 
   # Android 12 handles the splash screen differently than previous versions.  Please visit
@@ -50,13 +50,13 @@ flutter_native_splash:
     # 640 pixels in diameter.
     # App icon without an icon background: This should be 1152×1152 pixels, and fit within a circle
     # 768 pixels in diameter.
-    image: assets/images/logo_light.png
+    image: assets/images/logo_android12_light.png
 
     # Splash screen background color.
     color: '#FFFFFF'
 
     # App icon background color.
-    #icon_background_color: "#111111"
+    icon_background_color: '#FFFFFF'
 
     # The branding property allows you to specify an image used as branding in the splash screen.
     #branding: assets/dart.png
@@ -64,9 +64,9 @@ flutter_native_splash:
     # The image_dark, color_dark, icon_background_color_dark, and branding_dark set values that
     # apply when the device is in dark mode. If they are not specified, the app will use the
     # parameters from above.
-    image_dark: assets/images/logo_dark.png
+    image_dark: assets/images/logo_android12_dark.png
     color_dark: '#000000'
-    #icon_background_color_dark: "#eeeeee"
+    icon_background_color_dark: '#000000'
 
   # The android, ios and web parameters can be used to disable generating a splash screen on a given
   # platform.
