build appbundle options

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,14 +29,20 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 def keystoreProperties = new Properties()
-def keystorePropertiesFile = rootProject.file('key.properties')
+def keystorePropertiesFile = rootProject.file('keystore.properties')
+
 if (keystorePropertiesFile.exists()) {
         keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
 android {
+    lint {
+        baseline = file("lint-baseline.xml")
+    }
+
     lintOptions {
         checkReleaseBuilds false
+        abortOnError false
     }
 
     compileSdkVersion 33
