--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:669436203673:ios:0ecb4fe56ee882ae325e08",
-  "FIREBASE_PROJECT_ID": "four-hours-prod",
-  "GCM_SENDER_ID": "669436203673"
+  "GOOGLE_APP_ID": "1:938925885472:ios:5f7cb7d3e91c4768b91445",
+  "FIREBASE_PROJECT_ID": "four-hours-5d3dd",
+  "GCM_SENDER_ID": "938925885472"
 }
