--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   shimmer: ^3.0.0
   flutter_native_splash: ^2.3.1
   flutter_launcher_icons: ^0.13.1
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
