--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -123,15 +123,23 @@ flutter {
 
 dependencies {
     // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    // implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
     // TODO: Add the dependencies for Firebase products you want to use
     // When using the BoM, don't specify versions in Firebase dependencies
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    // implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation("com.google.firebase:firebase-analytics-ktx")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-auth'
 
-    implementation 'com.google.firebase:firebase-core:17.0.0'
-    implementation ('com.google.firebase:firebase-auth:17.0.0'){
+
+    // implementation 'com.google.firebase:firebase-core:17.0.0'
+    // implementation ('com.google.firebase:firebase-auth:17.0.0'){
+    // exclude group: 'com.google.android.gms', module: 'play-services-safetynet'
+    // }
+}
+
+configurations.all {
     exclude group: 'com.google.android.gms', module: 'play-services-safetynet'
-    }
 }
 
